force-app/main/default/objects/Events__c/Events__c.object-meta.xml
<CustomObject>
    <label>Events</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>