force-app/main/default/objects/Events__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>Select end date and time</description>
    <inlineHelpText>You need to select end date and time</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>