force-app/main/default/objects/Events__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Live field</description>
    <inlineHelpText>You need to look for live</inlineHelpText>
    <label>Live?</label>
    <type>Checkbox</type>
</CustomField>