force-app/main/default/objects/Events__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>Select the seats</description>
    <inlineHelpText>You need to select the seats</inlineHelpText>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>