force-app/main/default/objects/Events__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>write Name</description>
    <inlineHelpText>write Address</inlineHelpText>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>