force-app/main/default/objects/Events__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Write Recurring</description>
    <inlineHelpText>Write Recurring</inlineHelpText>
    <label>Recurring?</label>
    <type>Checkbox</type>
</CustomField>