force-app/main/default/objects/Events__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description>Remaining Seats</description>
    <formula>Max_Seats__c  -  People_Attending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining Seats</inlineHelpText>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>