force-app/main/default/objects/Events__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>Select date and time</description>
    <inlineHelpText>You need to select date and time</inlineHelpText>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>