force-app/main/default/objects/Events__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Select from picklist</description>
    <inlineHelpText>You need to select from picklist</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Post Poned</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>