force-app/main/default/objects/Events__c/validationRules/Date_Time_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Time_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( End__c ))  &amp;&amp; (Start__c  &gt;=  End__c)</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>End Date/Time must be at-least 1 day ahead of Start Date/Time</errorMessage>
</ValidationRule>