force-app/main/default/objects/Events__c/validationRules/Event_Type_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Type_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Event_Type__c , &quot;In-Person&quot;) &amp;&amp;  ISBLANK( Location_Address_Book__c )</errorConditionFormula>
    <errorDisplayField>Location_Address_Book__c</errorDisplayField>
    <errorMessage>If Event Type field value is In-Person then user must select Location on Event Record</errorMessage>
</ValidationRule>