force-app/main/default/objects/Events__c/validationRules/Recuring_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Recuring_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>(Recurring__c = True &amp;&amp; ISPICKVAL(Frequency__c  ,&quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Frequency__c</errorDisplayField>
    <errorMessage>select frequency if recurring is true</errorMessage>
</ValidationRule>