force-app/main/default/objects/Events__c/validationRules/Virtual_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Virtual_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Event_Type__c , &quot;Virtual&quot;) &amp;&amp;  NOT(ISBLANK( Location_Address_Book__c ))</errorConditionFormula>
    <errorDisplayField>Location_Address_Book__c</errorDisplayField>
    <errorMessage>Cannot select location if virtual is selected</errorMessage>
</ValidationRule>